removed all the uncessesary imports and changed the variable name

--- a/Codes/task 2.ipynb
+++ b/Codes/task 2.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "from scipy.optimize import linprog"
    ]
   },
@@ -28,9 +27,9 @@
    ],
    "source": [
     "\"\"\"\n",
-    "    We have 5 products with us, we will call them x1, x2, x3, x4, x5.\n",
+    "    We have 5 products with us, we will call them a1, a2, a3, a4, a5.\n",
     "    The main equation for optimizing:-\n",
-    "    z = 5x_1 + 4x_2 + 6x_3 + 7x_4 + 8x_5\n",
+    "    z = 5a1 + 4a2 + 6a3 + 7a4 + 8a5\n",
     "\"\"\""
    ]
   },
@@ -71,7 +70,7 @@
     "    v. Product 5 = 5\n",
     "    \n",
     "    Making the equation for labour\n",
-    "    2x1 + 3x2 + 1x3 + 4x4 + 5x5 = 100\n",
+    "    2a1 + 3a2 + 1a3 + 4a4 + 5a5 = 100\n",
     "\"\"\""
    ]
   },
@@ -101,7 +100,7 @@
     "    v. Product 5 = 5\n",
     "    \n",
     "    Making the equation for machine time\n",
-    "    3x1 + 2x2 + 4x3 + x4 + 3x5 = 80\n",
+    "    3a1 + 2a2 + 4a3 + a4 + 3a5 = 80\n",
     "\"\"\""
    ]
   },
@@ -131,7 +130,7 @@
     "    v. Product 5 = 2\n",
     "    \n",
     "    Making the equation for raw materials\n",
-    "    4x1 + x2 + 3x3 + 2x4 + 2x5 = 70\n",
+    "    4a1 + a2 + 3a3 + 2a4 + 2a5 = 70\n",
     "\"\"\""
    ]
   },
@@ -143,12 +142,12 @@
    "source": [
     "# Coefficients of the inequality constraints\n",
     "A = [\n",
-    "    [2, 3, 1, 4, 5],    # Labor constraint\n",
-    "    [3, 2, 4, 1, 3],    # Machine time constraint\n",
-    "    [4, 1, 3, 2, 2],    # Raw materials constraint\n",
-    "    [1, 0, 0, 0, 0],    # Production of P1 constraint\n",
-    "    [0, -1, -1, 0, 0],  # Combined production of P2 and P3 (negated)\n",
-    "    [0, 0, 0, -1, 0]    # Minimum production of P4 (negated)\n",
+    "        [2, 3, 1, 4, 5],    # Labor constraint\n",
+    "        [3, 2, 4, 1, 3],    # Machine time constraint\n",
+    "        [4, 1, 3, 2, 2],    # Raw materials constraint\n",
+    "        [1, 0, 0, 0, 0],    # Production of P1 constraint\n",
+    "        [0, -1, -1, 0, 0],  # Combined production of P2 and P3 (negated)\n",
+    "        [0, 0, 0, -1, 0]    # Minimum production of P4 (negated)\n",
     "]"
    ]
   },
