adding comments to the code

--- a/Codes/task 2.ipynb
+++ b/Codes/task 2.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# importing nessary library\n",
     "from scipy.optimize import linprog"
    ]
   },
