changes in variable naming

--- a/Codes/task 2.ipynb
+++ b/Codes/task 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n    We have 5 products with us, we will call them x1, x2, x3, x4, x5.\\n    The main equation for optimizing:-\\n    \\n    So the equation on the LHS is, \\n    z = 5x_1 + 4x_2 + 6x_3 + 7x_4 + 8x_5\\n'"
+       "'\\n    We have 5 products with us, we will call them a1, a2, a3, a4, a5.\\n    The main equation for optimizing:-\\n    z = 5a1 + 4a2 + 6a3 + 7a4 + 8a5\\n'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,16 +46,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n    Given that the total labour available is 100 units, \\n        and also for each product the amount of labor required that is for,\\n    i. product 1 = 2\\n    ii. Product 2 = 3\\n    iii. Product 3 = 1\\n    iv. Product 4 = 4\\n    v. Product 5 = 5\\n    \\n    Making the equation for labour\\n    2x1 + 3x2 + 1x3 + 4x4 + 5x5 = 100\\n'"
+       "'\\n    Given that the total labour available is 100 units, \\n        and also for each product the amount of labor required that is for,\\n    i. product 1 = 2\\n    ii. Product 2 = 3\\n    iii. Product 3 = 1\\n    iv. Product 4 = 4\\n    v. Product 5 = 5\\n    \\n    Making the equation for labour\\n    2a1 + 3a2 + 1a3 + 4a4 + 5a5 = 100\\n'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n    Each product requires its own machine time that is for,\\n    i. product 1 = 3\\n    ii. Product 2 = 2\\n    iii. Product 3 = 4\\n    iv. Product 4 = 1\\n    v. Product 5 = 5\\n    \\n    Making the equation for machine time\\n    3x1 + 2x2 + 4x3 + x4 + 3x5 = 80\\n'"
+       "'\\n    Each product requires its own machine time that is for,\\n    i. product 1 = 3\\n    ii. Product 2 = 2\\n    iii. Product 3 = 4\\n    iv. Product 4 = 1\\n    v. Product 5 = 5\\n    \\n    Making the equation for machine time\\n    3a1 + 2a2 + 4a3 + a4 + 3a5 = 80\\n'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,16 +107,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n    Each product requires its own raw material that is for,\\n    i. product 1 = 4\\n    ii. Product 2 = 1\\n    iii. Product 3 = 3\\n    iv. Product 4 = 2\\n    v. Product 5 = 2\\n    \\n    Making the equation for raw materials\\n    4x1 + x2 + 3x3 + 2x4 + 2x5 = 70\\n'"
+       "'\\n    Each product requires its own raw material that is for,\\n    i. product 1 = 4\\n    ii. Product 2 = 1\\n    iii. Product 3 = 3\\n    iv. Product 4 = 2\\n    v. Product 5 = 2\\n    \\n    Making the equation for raw materials\\n    4a1 + a2 + 3a3 + 2a4 + 2a5 = 70\\n'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,16 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n    So the equation on the RHS will be,\\n    \\n    100\\n'"
+       "'\\n    So, in this problem we are trying to maximize the profit,\\n    \\n    Hence, on the LHS we will have\\n    values of the labour, machine time, raw materials, production of P1, combined production of P2 and P3, minimum production of P4\\n    \\n'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
