--- a/Linear Programming.ipynb
+++ b/Linear Programming.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n    We have 5 products with us, we will call them a1, a2, a3, a4, a5.\\n    The main equation for optimizing:-\\n    z = 5a1 + 4a2 + 6a3 + 7a4 + 8a5\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "    We have 5 products with us, we will call them a1, a2, a3, a4, a5.\n",
@@ -25,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,9 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n    Given that the total labour available is 100 units, \\n        and also for each product the amount of labor required that is for,\\n    i. product 1 = 2\\n    ii. Product 2 = 3\\n    iii. Product 3 = 1\\n    iv. Product 4 = 4\\n    v. Product 5 = 5\\n    \\n    Making the equation for labour\\n    2a1 + 3a2 + 1a3 + 4a4 + 5a5 = 100\\n'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "    Given that the total labour available is 100 units, \n",
@@ -55,9 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n    Each product requires its own machine time that is for,\\n    i. product 1 = 3\\n    ii. Product 2 = 2\\n    iii. Product 3 = 4\\n    iv. Product 4 = 1\\n    v. Product 5 = 5\\n    \\n    Making the equation for machine time\\n    3a1 + 2a2 + 4a3 + a4 + 3a5 = 80\\n'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "    Each product requires its own machine time that is for,\n",
@@ -74,9 +107,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n    Each product requires its own raw material that is for,\\n    i. product 1 = 4\\n    ii. Product 2 = 1\\n    iii. Product 3 = 3\\n    iv. Product 4 = 2\\n    v. Product 5 = 2\\n    \\n    Making the equation for raw materials\\n    4a1 + a2 + 3a3 + 2a4 + 2a5 = 70\\n'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "    Each product requires its own raw material that is for,\n",
@@ -93,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,9 +154,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n    So, in this problem we are trying to maximize the profit,\\n    \\n    Hence, on the LHS we will have\\n    values of the labour, machine time, raw materials, production of P1, combined production of P2 and P3, minimum production of P4\\n    \\n'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "    So, in this problem we are trying to maximize the profit,\n",
@@ -125,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,9 +217,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal solution found:\n",
+      "Units of P1: 0.00\n",
+      "Units of P2: 0.00\n",
+      "Units of P3: 10.00\n",
+      "Units of P4: 10.00\n",
+      "Units of P5: 10.00\n",
+      "Maximum profit: $210.00\n"
+     ]
+    }
+   ],
    "source": [
     "# Printing the results\n",
     "if result.success:                                  # Checking if optimal solution is found\n",
