--- a/Linear Programming.ipynb
+++ b/Linear Programming.ipynb
@@ -230,7 +230,7 @@
       "Units of P3: 10.00\n",
       "Units of P4: 10.00\n",
       "Units of P5: 10.00\n",
-      "Maximum profit: $210.00\n"
+      "Maximum profit: 210.00\n"
      ]
     }
    ],
@@ -243,7 +243,7 @@
     "    print(f\"Units of P3: {result.x[2]:.2f}\")        # Printing the optimal units of P3\n",
     "    print(f\"Units of P4: {result.x[3]:.2f}\")        # Printing the optimal units of P4\n",
     "    print(f\"Units of P5: {result.x[4]:.2f}\")        # Printing the optimal units of P5\n",
-    "    print(f\"Maximum profit: ${-result.fun:.2f}\")    # Printing the maximum profit which we will be getting from the calculation\n",
+    "    print(f\"Maximum profit: {-result.fun:.2f}\")     # Printing the maximum profit which we will be getting from the calculation\n",
     "else:\n",
     "    print(\"No optimal solution found.\")"
    ]
